# chat-context

./: Qwen3.6-35B-A3B_llama.cpp_移行手順.md  pack-foldermix.sh  task.md
flutter/: foldermix-context.md  foldermix-context.report.json
flutter/docs/: architecture.md  design.md  repositories.md  screens.md  testing.md  viewmodels.md
flutter/mobile_app/: pubspec.yaml
flutter/mobile_app/lib/: main.dart
flutter/mobile_app/test/: widget_test.dart
opencode-plugin/: .gitignore  README.ja-JP.md  README.md  opencode-multi-agent.schema.json  package.json  tsconfig.json
opencode-plugin/docs/: installation.md
opencode-plugin/scripts/: generate-schema.ts
opencode-plugin/src/: index.ts  tui-state.ts  tui.ts
opencode-plugin/src/agents/: council.ts  councillor.ts  designer.ts  explorer.ts  fixer.ts  index.ts  librarian.ts  observer.ts  oracle.ts  orchestrator.ts  permissions.ts
opencode-plugin/src/cli/: background-subagents.ts  bundled-skill-sync.ts  config-io.ts  config-manager.ts  custom-skills-registry.ts  custom-skills.ts  doctor.ts  index.ts  install.ts  paths.ts  providers.ts  skills.ts  system.ts  types.ts
opencode-plugin/src/config/: agent-mcps.ts  constants.ts  council-schema.ts  index.ts  loader.ts  schema.ts  (+3 more)
web-searcher/: .gitignore  README.md  pyproject.toml  requirements.txt
web-searcher/chrome_gemini_mcp/: __init__.py  browser.py  config.py  errors.py  models.py  parsers.py  server.py
web-searcher/scripts/: start_chrome_cdp.sh  start_chrome_cdp_headless.sh  stop_chrome_cdp.sh
web-searcher/tests/: test_config.py  test_parsers.py  test_server_tools.py
(+278 files in other folders)
