[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrome-gemini-mcp"
version = "0.1.0"
description = "A local MCP server that uses an existing Chrome session to query Gemini Web UI and Google Search."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
chrome-gemini-mcp = "chrome_gemini_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
